# outlook-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
scripts/: debug_auth.py  debug_interactive_auth.py  debug_minimal_auth.py  debug_scopes.py  test_e2e.py
src/outlook_cli/: auth.py  config.py  display.py  main.py
src/outlook_cli/commands/: auth_cmd.py  cal_cmd.py  mail_cmd.py
tests/: conftest.py  test_auth.py  test_auth_cmd.py  test_cal_cmd.py  test_cal_enhanced.py  test_config.py  test_display.py  test_mail_cmd.py  test_mail_enhanced.py  test_main_cli.py
