[project]
name = "outlook-cli"
version = "0.1.0"
description = "CLI tool for Microsoft Outlook — search/read/send emails, list/read/create calendar events"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "mhattingpete", email = "petersen2630@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
]
dependencies = [
    "O365>=2.0.37",
    "typer>=0.15",
    "rich>=13.0",
    "tomli-w>=1.0",
]

[project.scripts]
outlook = "outlook_cli.main:app"

[project.urls]
Homepage = "https://github.com/mhattingpete/outlook-cli"
Repository = "https://github.com/mhattingpete/outlook-cli"
Issues = "https://github.com/mhattingpete/outlook-cli/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
